# choregrapher-rs

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
cli/: Cargo.toml  docker-compose.yml
cli/mongo/: 10_initdb.js  20_events.js  20_graph.js  20_process.js  30_indexes.js
cli/src/: choregraphy.rs  choregraphy_inspect.rs  choregraphy_ls.rs  choregraphy_process.rs  fs.rs  inject.rs  main.rs  process.rs
config/: default.toml  development.toml  production.toml
field_accessor_derive/: Cargo.toml
field_accessor_derive/src/: lib.rs
field_accessor_derive/tests/: lib.rs
node-rs/: Cargo.toml  README.md  docker-compose.yml
node-rs/examples/: 2inputs.rs  2inputs_struct.rs  fact.rs  fact_struct.rs  map_join.rs  map_join_struct.rs
node-rs/src/: builder.rs  context.rs  db.rs  fetchparameter.rs  flow_message.rs  graph.rs  lib.rs  macros.rs  main_error.rs  output_processor.rs  process_output.rs  rabbitmq.rs  routing.rs  settings.rs  start_process.rs  tracing.rs
