[package]
name = "dancer"
version = "0.1.0"
authors = ["djedi <moise.valvassori@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
node-rs = { path="../node-rs" }
clap = { version = "3", features = ["derive"] }
clap_complete = "3"
anyhow = "1.0"
indicatif = "0.15.0"
log = "^0.4"
pretty_env_logger = "^0.4"

mongodb = { version="=2.3" , features = ["bson-chrono-0_4"]} # git= "https://github.com/mongodb/mongo-rust-driver"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = {version="^0.4", features = ["serde"]}
mongodb-gridfs = {version="0.2", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["full"] } # dev -> full
tokio-stream = "0.1"
