[package]
name = "field_accessor_derive"
version = "0.1.0"
authors = ["moise.valvassori <moise.valvassori@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = {version="1.0"} #, features=["extra-traits"]}
quote = "1.0"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }

