[package]
name = "node-rs"
version = "0.1.0"
authors = ["djedi <moise.valvassori@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
field_accessor_derive = {version= "0.1.0", path = "../field_accessor_derive" }
anyhow = "1.0"
lapin = { version = "1.2.1" }
log = "^0.4"
pretty_env_logger = "^0.4"
mongodb = { version="2.3" , features = ["bson-chrono-0_4"]} # git= "https://github.com/mongodb/mongo-rust-driver"
config = "0.13"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
chrono = {version="^0.4", features = ["serde"]}
lazy_static = "1.4.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
yansi = "0.5.0"
openssl = { version = "0.10", features = ["vendored"] }
tokio = { version = "1.24", features = ["full"] } # dev
