[package]
name = "node-rs"
version = "0.1.0"
authors = ["djedi <moise.valvassori@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
field_accessor_derive = {version= "0.1.0", path = "../field_accessor_derive" }
anyhow = "1.0"
lapin = { version = "2" }
mongodb = { version="2.3" , features = ["bson-chrono-0_4"]} # git= "https://github.com/mongodb/mongo-rust-driver"
config = "0.13"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
chrono = {version="^0.4", features = ["serde"]}
uuid = { version = "0.8", features = ["serde", "v4"] }
yansi = "0.5.0"
openssl = { version = "0.10", features = ["vendored"] }
tokio = { version = "1.24", features = ["full"] } # dev
tokio-executor-trait = "2.1"
tokio-reactor-trait = "1.1"
tracing = "0.1"
tracing-subscriber = {version="0.3", features=["env-filter"]}
console-subscriber = {version="0.1", optional=true}
tracing-forest = { version = "0.1", features = ["full"], optional=true }
opentelemetry = { version = "0.18", features = ["rt-tokio"], optional=true }
tracing-opentelemetry = { version = "0.18", optional=true }
opentelemetry-jaeger = { version = "0.17", features = ["rt-tokio", "tokio"], optional=true }
async-trait = "0.1"

[features]
default=["forest"]
forest = ["dep:tracing-forest"]
tokio-console = ["dep:console-subscriber"]
otel = ["dep:opentelemetry", "dep:tracing-opentelemetry", "dep:opentelemetry-jaeger"]